# $Id$

2006-06-28	Konstantin V. Arkhipov

	* main/DAOs/Handlers/: segment's handling logic separated from
	DAO-workers.

	* src/core/DB/Dialect.c: declarations of timeZone() and
	dropTableMode() corrected.

	* main/DAOs/: sub-directories for Workers and upcoming Handlers
	introduced.

2006-06-27	Konstantin V. Arkhipov

	* ext/: php's extension moved from incubator.

2006-06-27	Anton E. Lebedevich

	* core/OSQL/SelectQuery.class.php: GroupBy class dropped.

2006-06-25	Konstantin V. Arkhipov

	* main/Containers/: sub-directories for Storable and Unified
	containers introduced.

	* core/Base/Timestamp.class.php: extended support of malformed dates,
	normalization introduced for such cases.

	* core/Form/Primitives/PrimitiveDate.class.php: introduced support of
	dates from Jesus' birthday to 9999-12-31.

	* core/Form/Filters/RemoveSymbolsFilter.class.php: removed in favour
	of StringReplaceFilter.

	* core/Form/PlainForm.class.php: Range-related methods moved to
	PrimitiveRange.

	* core/Form/FormUtils.class.php: backward compatibility with php-5.0
	dropped.

	* core/Form/: sub-directories for Filters and Primitives introduced.

	* core/Form/PlainForm.class.php: backward compatibility with 0.2
	removed.

	* core/Base/Timestamp.class.php: makeNow() and makeToday() added.

	* core/Base/Creatable.class.php,
	core/Base/SingletonInstance.class.php: removed.

2006-06-25	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: getHostFromUrl() renamed to 
	getRootFromUrl().

2006-06-25	Konstantin V. Arkhipov

	* 0.4.7 released.

2006-06-24	Anton E. Lebedevich
	
	* main/Utils/TextUtils.class.php: getHostFromUrl(), getPathFromUrl(), 
	UrlSafeBase64Encode(), UrlSafeBase64Decode() added.

2006-06-22	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: SQLArray support implemented.

2006-06-17	Konstantin V. Arkhipov

	* main/Flow/EditorController.class.php: uses makeForm() now.

	* meta/builders/ProtoClassBuilder.class.php: getForm() (single global